--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,3 +10,25 @@
   box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.09);
 }
 
+.ingreso-texto {
+  position: absolute;
+  width: 57rem;
+  height: 48px;
+  left: 20rem;
+  top: 12rem;
+
+  font-family: var(--fuentePrincipal);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 32px;
+  
+  line-height: 150%;
+  border: 0;
+  outline: none;
+  color: var(--colorSecundario);
+  background: var(--colorPrimario);
+}
+
+.ingreso-texto::placeholder {
+  color: var(--colorSecundario);
+}
