--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,6 @@
   left: 90rem;
   top: 0px;
   background: #ffffff;
-  margin-top: 10px;
   border-radius: 32px;
   box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.09);
 }
@@ -32,3 +31,22 @@
 .ingreso-texto::placeholder {
   color: var(--colorSecundario);
 }
+
+.info {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: .8rem;
+  position: absolute;
+  width: 32rem;
+  height: 1.8rem;
+  left: 20.5rem;
+  top: 50rem;
+  padding: 0px;
+}
+
+.icono-exclamacion {
+  width: 16px;
+  height: 16px;
+}
+
