se agregó nuevo color

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -2,6 +2,10 @@
 	--colorPrimario: #f3f5fc;
 	--colorSecundario: #0a3871;
   --colorTerciario: #ffffff;
+  --colorCuaternario: #D8DFE8;
+	
+	--colorNegro: #000000;
+	--colorGrisClaro: #cccccc;
 
 	--separacion: 1.5rem;
 
