--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,5 @@
+/* DIV - RECTANGULO BLANCO */
+
 .rectangle {
   position: absolute;
   width: 40rem;
@@ -8,6 +10,8 @@
   border-radius: 32px;
   box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.09);
 }
+
+/* INPUT - INGRESO DE TEXTO */
 
 .ingreso-texto {
   position: absolute;
@@ -32,6 +36,8 @@
   color: var(--colorSecundario);
 }
 
+/* DIV, IMG - INFORMACION  */
+
 .info {
   display: flex;
   flex-direction: row;
@@ -41,7 +47,7 @@
   width: 32rem;
   height: 1.8rem;
   left: 20.5rem;
-  top: 50rem;
+  top: 48.5rem;
   padding: 0px;
 }
 
@@ -50,3 +56,61 @@
   height: 16px;
 }
 
+/* INPUT - ESTILOS PARA BOTONES DE ENCRIPTACION Y DESENCRIPTACION */
+
+.btn-en-de {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  gap: 2.4rem;
+  padding: 0px;
+  position: absolute;
+  width: 68rem;
+  height: 6.7rem;
+  left: 20rem;
+  top: 51.9rem;
+}
+
+.btn-encriptar, .btn-desencriptar {
+  width: 32rem;
+  height: 6.7rem;
+  flex-grow: 0;
+  flex: none;
+  border-radius: 2.4rem;
+  font-size: 2rem;
+  transition: background 1.3s, color .5s, border 1.2s;
+}
+
+.btn-encriptar:hover, .btn-desencriptar:hover {
+  cursor: pointer;
+}
+
+.btn-encriptar {
+  order: 0;
+  border: 0px;
+  color: var(--colorTerciario);
+  background: var(--colorSecundario);
+}
+
+.btn-encriptar:hover {
+  background: var(--colorCuaternario);
+  border: 1px solid var(--colorSecundario);
+  color: var(--colorSecundario);
+}
+
+.btn-desencriptar {
+  order: 1;
+  border: 1px solid var(--colorSecundario);
+  color: var(--colorSecundario);
+  background: var(--colorCuaternario);
+}
+
+.btn-desencriptar:hover {
+  background: var(--colorSecundario);
+  border: 0px;
+  color: var(--colorCuaternario);
+}
+
+.btn-encriptar:active, .btn-desencriptar:active {
+  transform: scale(.95);
+}
