se agregó etiquetas semanticas y se renombre css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 /* DIV - RECTANGULO BLANCO */
 
-.rectangle {
+.seccion__lateral {
   display: flex;
   flex-direction: column;
   align-items: center;
