renombrando clase css y cambio de tipo en input

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -170,7 +170,7 @@
 
 /* TEXTAREA - TEXTO DESENCRIPTADO */
 
-.txtarea-desencriptado {
+.txtarea-mensaje {
   position: absolute;
   margin-top: 20px;
   resize: none;
